--- a/css/pages/profile.css
+++ b/css/pages/profile.css
@@ -44,6 +44,21 @@
 @media (max-width: 768px) {
     .profile-header {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
+        text-align: center;
+    }
+
+    #profile-page .grid-2 {
+        grid-template-columns: 1fr;
+    }
+
+    .profile-avatar {
+        width: 80px;
+        height: 80px;
+        font-size: 1.6rem;
+    }
+
+    .profile-stats {
+        grid-template-columns: 1fr;
     }
 }
